# metal-tensor

./: CMakeLists.txt  README.md  codex-write-test.txt
docs/: tensor.md
orchard/core/tensor/: DType.h  Storage.cpp  Storage.h  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorImpl.h
orchard/runtime/: Allocator.cpp  Allocator.h  CpuContext.cpp  CpuContext.h  MetalContext.h  MetalContext.mm
tests/: TensorTest.cpp  tensor_test.cpp
